Fixed clipped context menu on mobile devices

--- a/src/app/tabs/filelist/ActionBar.module.scss
+++ b/src/app/tabs/filelist/ActionBar.module.scss
@@ -6,7 +6,9 @@
     padding: 0.75em 0;
 
     @include mq-phones {
+        position: static;
         padding-bottom: 0;
+        width: 100%;
     }
 
     bc-icon {
